Changed the purpose

--- a/client/index.html
+++ b/client/index.html
@@ -4,41 +4,26 @@
     <meta charset="utf-8">
     <meta charset="iso-8559-1"/>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <title>Paint</title>
+    <title>Face Recognition</title>
     <style type="text/css">
-        .lienzo{
-            padding: 0;
-            margin: auto;
-            display: block;
-            width: 1000px;
-            height: 700px;
-        }
         #noDisplay{
             display: none;
         }
         #yesDisplay{
-            display: block;
-        }
-        .noMobile{
-            font-size: 50px;
-            font-family: "Arial";
-            text-align: center;
-            font-weight: bold;
+            display: block;   
         }
     </style>
 </head>
 <body>
-    <div class="todo" id="noDisplay">
-        <canvas class="lienzo" style="background-color:rgba(120, 120, 120 ,1);"></canvas>
-    </div>
     <div class="noMobile" id="noDisplay">This Website is not made for mobile devices</div>
+    <div class="todo" id="noDisplay">xd</div>
     <script type="text/javascript" src="https://cdn.socket.io/socket.io-1.4.5.js">
     </script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js">
     </script> 
     <script type="text/javascript">
-        var socket = io();
-        function isMobile(){
+        var socket = io();  //connection with the server
+        function isMobile(){    // check if the user is in a mobile device
             return (
                 (navigator.userAgent.match(/Android/i)) ||
                 (navigator.userAgent.match(/webOS/i)) ||
@@ -50,20 +35,21 @@
         };
         var noMobile = document.getElementsByClassName("noMobile")[0];
         var todo = document.getElementsByClassName("todo")[0];
-        if(isMobile()){
+        if(isMobile()){ //if it is mobile, hide todo
             todo.id = 'noDisplay';
             noMobile.id = 'yesDisplay';
-        }else{
+        }else{  //if it is in a website hide noMobile
             todo.id = 'yesDisplay';
             noMobile.id = 'noDisplay';
         }
-        function actualizarTama(){
+        function actualizarTama(){  //this is for not changing the size of the screen
             $("body").css("zoom", window.innerWidth / 1530);
         };
-        $(document).ready(function(){
+        $(document).ready(function(){   //this is for not changing the size of the screen
             $(window).on("resize", actualizarTama);
             actualizarTama();  
         });
     </script>
 </body>
 </html>
+
