Change the font of mobile

--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,11 @@
         #yesDisplay{
             display: block;   
         }
+        .noMobile{
+            font-size: 50px;
+            font-family: "Arial";
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
