--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,9 @@
             font-weight: bold;
             text-align: center;
         }
+        #video{
+            
+        }
     </style>
 </head>
 <body>
@@ -31,7 +34,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js">
     </script> 
     <script type="text/javascript"> // This is the App JS
-        var socket = io();  //connection with the server
     </script>
     <script src="main.js"> // This is the Main JS
     </script>
