--- a/client/index.html
+++ b/client/index.html
@@ -27,6 +27,7 @@
 <body>
     <div class="noMobile" id="noDisplay">This Website is not made for mobile devices</div>
     <div class="todo" id="noDisplay">
+        <video id='video' width='720' height='560' autoplay muted></video>
     </div>
     <script type="text/javascript" src="https://cdn.socket.io/socket.io-1.4.5.js">
     </script>
