--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,13 @@
     <title>Face Recognition</title>
     <script src="face-api.js"></script>
     <style type="text/css">
+        body{
+            margin: 0;
+            padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
         #noDisplay{
             display: none;
         }
@@ -20,7 +27,10 @@
             text-align: center;
         }
         #video{
-
+        }
+        canvas{
+            position: absolute;
+            left: 400px;
         }
     </style>
 </head>
